deployments/app-1-inject-test/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-11
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: app-11
